Added applet and jnlp templates that are used to create files with the current version number durring the build. Updated the and file to use the arbil directory on the server. Updated the ant file to create the jnlp and applet files and push them to the server at the same time as pushing the new jar file. Updated the type checker jar version in the ant file.

--- a/src/nl/mpi/arbil/arbil.jnlp.template
+++ b/src/nl/mpi/arbil/arbil.jnlp.template
@@ -26,7 +26,7 @@
         <jar href="lib/log4j-1.2.14.jar" download="eager"/>
         <jar href="lib/saxon8.jar" download="eager"/>
         <jar href="lib/saxon8-dom.jar" download="eager"/>
-        <jar href="lib/typecheck.jar" download="eager"/>
+        <jar href="lib/@TypeCheckVersion@" download="eager"/>
         <jar href="lib/xalan-2.6.0.jar" download="eager"/>
         <jar href="lib/xercesImpl-2.9.0.jar" download="eager"/>
     </resources>
