Extended the template menu code. Updated the default template code. Added save and load of the current template selection. Updated strings to file objects where possible. Added resource icon for remote resources where the type checker cannot be used. Prevented the tree nodes collapsing when nodes reload. Updated the tree sorter to better manage the addition and removal of nodes without branches collapsing. Added the getting and setting of the selected template for a given IMDI file. Added display of the template for a given IMDI node in the tool tip popup. Added loading of templates in the order of: named from disk, named in jar, default in jar (first found will be loaded). Added default and signlanguage templates in the menu. Added the ability to create new templates on disk that can be edited by the user. Added template files for the sign language template.

--- a/src/nl/mpi/arbil/arbil-testing.jnlp.template
+++ b/src/nl/mpi/arbil/arbil-testing.jnlp.template
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jnlp spec="1.0+" codebase="http://www.mpi.nl/tg/j2se/jnlp/arbil/" href="arbil.jnlp">
+<jnlp spec="1.0+" codebase="http://www.mpi.nl/tg/j2se/jnlp/arbil/" href="arbil-testing.jnlp">
     <information>
         <title>Arbil</title>
         <icon href="http://www.mpi.nl/tg/j2se/jnlp/arbil/arbil128x128.png" />
