--- a/src/nl/mpi/arbil/arbil-testing.jnlp.template
+++ b/src/nl/mpi/arbil/arbil-testing.jnlp.template
@@ -11,7 +11,7 @@
             <!-- <menu /> -->
         </shortcut>
         <vendor>Max Planck Institute for Psycholinguistics</vendor>
-        <homepage href=""/>
+        <homepage href="http://www.lat-mpi.eu/tools/imdi/Arbil/"/>
         <description>Arbil is a local metadata organising tool for researchers</description>
         <description kind="short">Linguistic Organiser</description>
     </information>
@@ -31,5 +31,6 @@
         <jar href="lib/xercesImpl-2.9.0.jar" download="eager"/>
     </resources>
     <application-desc main-class="nl.mpi.arbil.LinorgFrame">
+        <argument>-update_via_javaws</argument>
     </application-desc>
 </jnlp>
