--- a/src/nl/mpi/arbil/ArbilApplet.html.template
+++ b/src/nl/mpi/arbil/ArbilApplet.html.template
@@ -6,7 +6,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-    <title>Arbil Test Applet</title>
+    <title>Arbil Applet</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   </head>
   <body>
