Added work around for the java classes that cant figure this out white space in a uri that points to a file. Corrected the resolution of the URI for local and remote resource files. Added a context menu item to re-import corpus branches and sessions from their original location (server or file system). Tidied the success / failure info provided when importing / exporting. Tidied the maximise action of the import/export dialogue. Corrected the path copied to the clipboard from nodes in the tree. Updated the signlanguage template to handle autoupdate fields. Added a template for CMDI metadata. Made more context menu items available in the table etc. Enabled cmdi and clarin metadata as nodes and child nodes in the application. Set the clarin template for all clarin nodes loaded. Corrected the order of the merged context menu. Corrected the display of the menu separators for the merged context menu. Added support for UNC network file paths (windows network drives). Added a tree for unlinked files (lost or deleted). Added the shibboleth login panel for the import dialogue. Added a context menu item to open the cell in the long field editor. Added text labels to the long field editor. Limited the start drag event from the tree to start from only the first mouse button. Added work around to address the java drag drop trigger from firing too often on the windows platform by ignoring any drag drop action that took less than x seconds from start and end. Updated the keys name edit action to update the the table column names etc. Added labels to the long field editor for the keys name and language input fields. Simplified the table column filter and order and  code. Added detailed "are you sure" messages to complex paste actions. Updated the field change detection to recognises the original values, so that save will not be required if the user undoes the changes by either undo or manually. Added ImageMagick for win32 as one of the jar files for the jnlp (used for creating thum

--- a/src/nl/mpi/arbil/arbil-testing.jnlp.template
+++ b/src/nl/mpi/arbil/arbil-testing.jnlp.template
@@ -29,7 +29,11 @@
         <jar href="lib/@TypeCheckVersion@" download="eager"/>
         <jar href="lib/xalan-2.6.0.jar" download="eager"/>
         <jar href="lib/xercesImpl-2.9.0.jar" download="eager"/>
+        <jar href="lib/bcprov-jdk15-143.jar" download="eager"/>
     </resources>
+    <resources os="windows">
+        <nativelib href="lib/ImageMagickWin32.jar"/>
+    </resource>
     <application-desc main-class="nl.mpi.arbil.LinorgFrame">
         <argument>-update_via_javaws</argument>
     </application-desc>
