Added a windows icon. Added a windows installer build script. Updated the arbil version number in the windows installer script from the ant build file. Added an Ant task to build the windows installer.

--- a/src/arbil-win-installer.iss.template
+++ b/src/arbil-win-installer.iss.template
@@ -15,7 +15,7 @@ AppUpdatesURL=http://www.lat-mpi.eu/tools/arbil
 DefaultDirName={pf}\Arbil
 DefaultGroupName=Language archiving tools (LAT) 
 OutputDir=C:\windows\profiles\petwit\Desktop\@BuildDirectory@\distribution-win32
-OutputBaseFilename=arbil-setup
+OutputBaseFilename=arbil-installer-@ArbilVersionNumber@
 Compression=lzma
 SolidCompression=yes
 
