--- a/src/arbil-testing.jnlp.template
+++ b/src/arbil-testing.jnlp.template
@@ -33,7 +33,7 @@
         <jar href="lib/slcshttps_jdk15_v0.2.jar" download="eager"/>
     </resources>
     <resources os="windows">
-        <nativelib href="lib/ImageMagickWin32.jar"/>
+        <nativelib href="lib/ImageMagick-6.5.9-Win32.jar"/>
     </resource>
     <application-desc main-class="nl.mpi.arbil.LinorgFrame">
         <argument>-update_via_javaws</argument>
