Added class to read the clarin profiles list from the server. Added the Clarin profiles list to the add menu. Prevented error creating the context menu under some circumstances. Added a work around for windows and convert which has a same named file in the system directory. Corrected import export path issues caused by the changes enabling windows UNC paths. Removed the jnlp start menu items due to inconsistency issues.

--- a/src/arbil-testing.jnlp.template
+++ b/src/arbil-testing.jnlp.template
@@ -5,8 +5,8 @@
         <icon href="http://www.mpi.nl/tg/j2se/jnlp/arbil/arbilTesting128x128.png" />
         <offline-allowed/>
         <shortcut online="false">
-            <desktop />
-            <menu sub-menu="Language Archiving Tools" />
+            <!--<desktop />-->
+            <!--<menu sub-menu="Language Archiving Tools" />-->
             <!-- <menu sub-menu="" /> -->
             <!-- <menu /> -->
         </shortcut>
