Added a windows icon. Added a windows installer build script. Updated the arbil version number in the windows installer script from the ant build file. Added an Ant task to build the windows installer. Within Ant: put the installer into a zip file and pushed to the server. Corrected error in the table cell editor. Prevent the "hide column" menu item showing when the session column is selected because it cannot be hidden. Added check for Java version 1.5 or greater to the windows installer. Added the slcshttps jar to the ant script. Made sure the thumbnails are deleted from the temp directory on exit. Updated the imagemagick jar used on windows. Removed one of the categories from the deb package desktop entry. Added requirements for windows version of imagemagick. Added an addition test for long path names greater than 260 chars. Added class to read the clarin profiles list from the server. Prevented error creating the context menu under some circumstances. Added a work around for windows and convert which has a same named file in the system directory. Updated the windows installer to handle imagemagick better. Corrected import export path issues caused by the changes enabling windows UNC paths. Removed the jnlp start menu items due to inconsistency issues. Added another workaround to the shiboleth workaround jungle. Fixed issue with https. Added test case for https. Removed https testing code. Added menu action to re-download the current controlled vocabularies from the server.

--- a/src/arbil-win-installer.iss.template
+++ b/src/arbil-win-installer.iss.template
@@ -49,19 +49,19 @@ Name: "quicklaunchicon"; Description: "{cm:CreateQuickLaunchIcon}"; GroupDescrip
 
 [Files]
 Source: "C:\windows\profiles\petwit\Desktop\@BuildDirectory@\arbil-@ArbilVersionNumber@.jar"; DestDir: "{app}"; Flags: ignoreversion
-Source: "C:\windows\profiles\petwit\Desktop\@BuildDirectory@\distribution-win32\temp\arbil128x128.ico"; DestDir: "{app}"; Flags: ignoreversion
+Source: "C:\windows\profiles\petwit\Desktop\@BuildDirectory@\distribution-win32\temp\arbil-testing128x128.ico"; DestDir: "{app}"; Flags: ignoreversion
 Source: "C:\windows\profiles\petwit\Desktop\@BuildDirectory@\distribution-win32\temp\ImageMagick\*"; DestDir: "{app}\ImageMagick\"; Flags: ignoreversion
 ; todo: include the imagemagick sub directories
 Source: "C:\windows\profiles\petwit\Desktop\@BuildDirectory@\lib\*"; DestDir: "{app}\lib\"; Flags: ignoreversion recursesubdirs createallsubdirs
 ; NOTE: Don't use "Flags: ignoreversion" on any shared system files
 
 [Icons]
-Name: "{group}\Arbil"; Filename: "{app}\arbil-@ArbilVersionNumber@.jar"; WorkingDir: "{app}"; IconFileName:"{app}\arbil128x128.ico";
+Name: "{group}\Arbil"; Filename: "{app}\arbil-@ArbilVersionNumber@.jar"; WorkingDir: "{app}"; IconFileName:"{app}\arbil-testing128x128.ico";
 Name: "{group}\{cm:ProgramOnTheWeb,Arbil}"; Filename: "http://www.lat-mpi.eu/tools/arbil"
 Name: "{group}\{cm:ProgramOnTheWeb,Arbil Forum}"; Filename: "http://www.lat-mpi.eu/tools/arbil/Arbil-forum/"
 Name: "{group}\Launch Arbil Via Webstart"; Filename: "http://www.mpi.nl/tg/j2se/jnlp/linorg/arbil.jnlp"
-Name: "{commondesktop}\Arbil"; Filename: "{app}\arbil-@ArbilVersionNumber@.jar"; Tasks: desktopicon; IconFileName:"{app}\arbil128x128.ico";
-Name: "{userappdata}\Microsoft\Internet Explorer\Quick Launch\Arbil"; Filename: "{app}\arbil-@ArbilVersionNumber@.jar"; Tasks: quicklaunchicon; IconFileName:"{app}\arbil128x128.ico";
+Name: "{commondesktop}\Arbil"; Filename: "{app}\arbil-@ArbilVersionNumber@.jar"; Tasks: desktopicon; IconFileName:"{app}\arbil-testing128x128.ico";
+Name: "{userappdata}\Microsoft\Internet Explorer\Quick Launch\Arbil"; Filename: "{app}\arbil-@ArbilVersionNumber@.jar"; Tasks: quicklaunchicon; IconFileName:"{app}\arbil-testing128x128.ico";
 
 [Run]
 Filename: "{app}\arbil-@ArbilVersionNumber@.jar"; WorkingDir: "{app}"; Description: "{cm:LaunchProgram,Arbil}"; Flags: shellexec postinstall skipifsilent
