--- a/src/arbil-testing.jnlp.template
+++ b/src/arbil-testing.jnlp.template
@@ -5,7 +5,7 @@
         <icon href="http://www.mpi.nl/tg/j2se/jnlp/arbil/arbil-testing128x128.png" />
         <offline-allowed/>
         <shortcut online="false">
-            <!--<desktop />-->
+            <desktop />
             <!--<menu sub-menu="Language Archiving Tools" />-->
             <!-- <menu sub-menu="" /> -->
             <!-- <menu /> -->
