--- a/src/arbil.jnlp.template
+++ b/src/arbil.jnlp.template
@@ -6,7 +6,7 @@
         <offline-allowed/>
         <shortcut online="false">
             <desktop />
-            <menu sub-menu="Language Archiving Tools" />
+            <!--<menu sub-menu="Language Archiving Tools" />-->
             <!-- <menu sub-menu="" /> -->
             <!-- <menu /> -->
         </shortcut>
