--- a/src/arbil-win-installer.iss.template
+++ b/src/arbil-win-installer.iss.template
@@ -56,12 +56,13 @@ Source: "C:\windows\profiles\petwit\Desktop\@BuildDirectory@\lib\*"; DestDir: "{
 ; NOTE: Don't use "Flags: ignoreversion" on any shared system files
 
 [Icons]
-Name: "{group}\Arbil"; Filename: "{app}\arbil-@ArbilVersionNumber@.jar"; WorkingDir: "{app}"; IconFileName:"{app}\arbil-testing128x128.ico";
+; TODO: put the text "Launch Arbil Testing Via Webstart" into the language files
+Name: "{group}\Arbil Testing"; Filename: "{app}\arbil-@ArbilVersionNumber@.jar"; WorkingDir: "{app}"; IconFileName:"{app}\arbil-testing128x128.ico";
 Name: "{group}\{cm:ProgramOnTheWeb,Arbil}"; Filename: "http://www.lat-mpi.eu/tools/arbil"
 Name: "{group}\{cm:ProgramOnTheWeb,Arbil Forum}"; Filename: "http://www.lat-mpi.eu/tools/arbil/Arbil-forum/"
 Name: "{group}\Launch Arbil Testing Via Webstart"; Filename: "http://www.mpi.nl/tg/j2se/jnlp/linorg/arbil-testing.jnlp"
-Name: "{commondesktop}\Arbil"; Filename: "{app}\arbil-@ArbilVersionNumber@.jar"; Tasks: desktopicon; IconFileName:"{app}\arbil-testing128x128.ico";
-Name: "{userappdata}\Microsoft\Internet Explorer\Quick Launch\Arbil"; Filename: "{app}\arbil-@ArbilVersionNumber@.jar"; Tasks: quicklaunchicon; IconFileName:"{app}\arbil-testing128x128.ico";
+Name: "{commondesktop}\Arbil Testing"; Filename: "{app}\arbil-@ArbilVersionNumber@.jar"; Tasks: desktopicon; IconFileName:"{app}\arbil-testing128x128.ico";
+Name: "{userappdata}\Microsoft\Internet Explorer\Quick Launch\Arbil Testing"; Filename: "{app}\arbil-@ArbilVersionNumber@.jar"; Tasks: quicklaunchicon; IconFileName:"{app}\arbil-testing128x128.ico";
 
 [Run]
 Filename: "{app}\arbil-@ArbilVersionNumber@.jar"; WorkingDir: "{app}"; Description: "{cm:LaunchProgram,Arbil}"; Flags: shellexec postinstall skipifsilent
