Enabled the working directory to be selected by the user. Retested and resolved various Mac Windows file select issues. Modified change storage directory code to be shared and to also change the working directory. Adapted various functions to handle the changeable working directory. Added shared file dialogue code that saves the last used directory and tries to make the Mac jvm file select useable.

--- a/src/arbil-testing.jnlp.template
+++ b/src/arbil-testing.jnlp.template
@@ -13,7 +13,9 @@
         <homepage href="http://www.lat-mpi.eu/tools/imdi/Arbil/"/>
         <description>Arbil is a local metadata organising tool for researchers</description>
         <description kind="short">Linguistic Organiser</description>
+        <!-- this extension causes the arbil application icon to be displayed on all imdi files which is confusing to users, so it has been removed
         <association extensions="IMDI imdi" mime-type="application/IMDI"/>
+        -->
     </information>
     <security>
         <all-permissions/>
