Renamed functions to be less IMDI specific. Added functions to test for CMDI vs IMDI. When adding new nodes set the file suffix to imdi or cmdi accordingly. Added CMDI icon for use in the tree and tables. Added CMDI specific templates code. Refactored the classes related to templates into a separate package. Enabled the clarin "add" menu in the local tree root node and in corpus nodes. Added a clarin component link reader class. Added Clarin "potential child" link reader. Added class to handle loading and inserting into CMDI files. Started to read the xsd file to generate the xml for clarin. Updated the clarin profile reader to grab the xsd from the server. Updated the local file name used for stored html objects so that it handles rest paths better. Modified the Ant script to take the application version string and name the tiles and title the application and select the application icon accordingly. Modified the Mac installer to handle white space in the .app saved location path.

--- a/src/Info.plist.template
+++ b/src/Info.plist.template
@@ -7,7 +7,7 @@
 	<key>CFBundleGetInfoString</key>
 		<string>Arbil @ArbilVersionNumber@ for Mac OS X</string>
 	<key>CFBundleIconFile</key>
-		<string>arbil-testing.icns</string>
+		<string>arbil@FilenameIdentifier@.icns</string>
 	<key>CFBundleIdentifier</key>
 		<string>nl.mpi.arbil.arbil-testing</string>
 	<key>CFBundleInfoDictionaryVersion</key>
