--- a/src/arbil.jnlp.template
+++ b/src/arbil.jnlp.template
@@ -34,11 +34,11 @@
         <jar href="lib/xercesImpl-2.9.0.jar" download="eager"/>
         <jar href="lib/bcprov-jdk15-143.jar" download="eager"/>
         <jar href="lib/slcshttps_jdk15_v0.2.jar" download="eager"/>
-        <jar href="xbean.jar" download="eager"/>
-        <jar href="commons-digester-2.0.jar" download="eager"/>
-        <jar href="commons-logging-1.1.jar" download="eager"/>
-        <jar href="commons-beanutils-1.8.0.jar" download="eager"/>
-        <jar href="xmlpublic.jar" download="eager"/>
+        <jar href="lib/xbean.jar" download="eager"/>
+        <jar href="lib/commons-digester-2.0.jar" download="eager"/>
+        <jar href="lib/commons-logging-1.1.jar" download="eager"/>
+        <jar href="lib/commons-beanutils-1.8.0.jar" download="eager"/>
+        <jar href="lib/xmlpublic.jar" download="eager"/>
         <!-- these prperties are now set in the main class<property name="apple.laf.useScreenMenuBar" value="true"/>
         <property name="apple.awt.graphics.UseQuartz" value="true"/>
         <property name="sun.swing.enableImprovedDragGesture" value="true"/>-->
