Redesigned the tree sort to traverse down the tree and to use low level methods not the unpredictable high level methods. Used the same blue text indicator for the tree as is used for the table cells to indicate if a node needs to be saved. Modified the tree renderer to prevent jumping and swapping of node labels and icons in later versions of the jvm. Prevented occasional deadlock on some OS. Removed residual dom id attributes left over from the imdi api. Added check on load and message to user that files need to be saved to remove dom id attributes (only for imdi files). Updated the archive handle removal to completely remove the attribute. Corrected bug when storing which nodes need to be saved. Corrected the node removal from the tree so that multiple are removed correctly. Updated the change working directory code so that the user can continue even if the files cannot be moved. Corrected the application version name in the various installers.

--- a/src/Info.plist.template
+++ b/src/Info.plist.template
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 		<string>arbil@FilenameIdentifier@.icns</string>
 	<key>CFBundleIdentifier</key>
-		<string>nl.mpi.arbil.arbil-testing</string>
+		<string>nl.mpi.arbil.arbil@FilenameIdentifier@</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 		<string>@ArbilVersionNumber@</string>
 	<key>CFBundleName</key>
