--- a/src/start-arbil.template
+++ b/src/start-arbil.template
@@ -2,4 +2,6 @@
 BASEDIR=`dirname "$0"`
 exec java \
 	-classpath "$BASEDIR/arbil-@ArbilVersionNumber@.jar:$BASEDIR/lib" \
+	-Xdock:name="@ApplicationTitle@" \
+        -Xdock:icon="$BASEDIR/../Resources/arbil@FilenameIdentifier@.icns" \
 	nl.mpi.arbil.LinorgFrame
